# cipherpay-anchor

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  PERFORMANCE.md  PHASE4_COMPLETE.md  README.md  ZKVERIFY_MIGRATION.md  jest.config.js  package-lock.json  package.json  tsconfig.json
migrations/: 01_init.ts
proofs/: deposit_proof.json  deposit_public.json  input_deposit.json  vkey_deposit.json  witness_deposit.wtns
scripts/: README.md  extractPublicInputs.js  find_zero_root.mjs  find_zero_root.ts  fix-idl.js  generateProof.sh  generate_idl.js  generate_input_deposit.js  toBytes.js
src/: constants.rs  context.rs  error.rs  error_code.rs  event.rs  events.rs  helper.rs  lib.rs  merkle.rs  state.rs  utils.rs  validation.rs  validation_limits.rs
src/zk_verifier/: constants_deposit.rs  constants_transfer.rs  constants_withdraw.rs  deposit.rs  mod.rs  solana_verifier.rs  transfer.rs  types.rs  vk_ids.rs  withdraw.rs
tests/: README.md  README_TEST_STRUCTURE.md  cipherpay.ts  deposit.ts  deposit_transfer.ts  deposit_transfer_withdraw.ts  recipientOwnerLimbs.ts  transfer.ts  unit_tests.rs  withdraw.ts  zk_verifier_tests.rs  zkverify-integration.test.ts
