[package]
name = "cipherpay-anchor"
version = "0.1.0"
description = "CipherPay Solana program using Anchor framework"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
# Use a lightweight default for SBF builds; enable real-crypto explicitly for x86 testing
default = []
real-crypto = [
    "ark-bn254",
    "ark-bls12-381",
    "ark-ff",
    "ark-ec",
    "ark-std",
    "ark-serialize",
    "ark-groth16",
    "ark-relations",
    "ark-crypto-primitives",
    "ark-snark"
]

[dependencies]
anchor-lang = "0.29.0"
# Avoid pulling in token-2022 confidential transfer verification (exceeds SBF stack)
anchor-spl = { version = "0.29.0", default-features = false, features = ["token"] }
solana-program = "2.3.0"
thiserror = "1.0"
bytemuck = { version = "1.13", features = ["derive"] }
sha2 = "0.10.8"
lazy_static = "1.4"
# Cryptographic dependencies for real Groth16 implementation
ark-bn254 = { version = "0.4.0", optional = true }
ark-bls12-381 = { version = "0.4.0", optional = true }
ark-ff = { version = "0.4.0", optional = true }
ark-ec = { version = "0.4.0", optional = true }
ark-std = { version = "0.4.0", optional = true }
ark-serialize = { version = "0.4.0", optional = true }
ark-groth16 = { version = "0.4.0", optional = true }
ark-relations = { version = "0.4.0", optional = true }
ark-crypto-primitives = { version = "0.4.0", optional = true, default-features = false, features = ["r1cs"] }
ark-snark = { version = "0.4.0", optional = true, default-features = false } 