[package]
name = "cipherpay-anchor"
version = "0.1.0"
description = "CipherPay Solana program using Anchor framework"
edition = "2021"
resolver = "2"                    # <<< add this

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Use a lightweight default for SBF builds; enable real-crypto explicitly for x86 testing
default = []
real-crypto = [
    "ark-bn254",
    "ark-bls12-381",
    "ark-ff",
    "ark-ec",
    "ark-std",
    "ark-serialize",
    "ark-groth16",
    "ark-relations",
    "ark-crypto-primitives",
    "ark-snark"
]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl  = { version = "0.31.1", default-features = false, features = ["token"] }
# (remove any [patch.crates-io] you've added earlier)


# Pin to Solana 2.x and strip defaults for safety
solana-program = { version = "2.3.0", default-features = false }

thiserror   = "1.0"
bytemuck    = { version = "1.13", features = ["derive"] }
sha2        = "0.10.8"
lazy_static = "1.4"

# Curves: keep only "curve"
ark-bn254      = { version = "0.4.0", optional = true, default-features = false, features = ["curve"] }
ark-bls12-381  = { version = "0.4.0", optional = true, default-features = false, features = ["curve"] }

# Bases: no features needed on 0.4; `default-features = false` => no_std+alloc
ark-std        = { version = "0.4.0", optional = true, default-features = false }
ark-ff         = { version = "0.4.0", optional = true, default-features = false }
ark-ec         = { version = "0.4.0", optional = true, default-features = false }
ark-serialize  = { version = "0.4.0", optional = true, default-features = false }
ark-relations  = { version = "0.4.0", optional = true, default-features = false }
ark-groth16    = { version = "0.4.0", optional = true, default-features = false }
ark-crypto-primitives = { version = "0.4.0", optional = true, default-features = false, features = ["r1cs"] }
ark-snark      = { version = "0.4.0", optional = true, default-features = false }

[patch.crates-io]
