[package]
name = "cipherpay-anchor"
version = "0.1.0"
description = "CipherPay Solana program using Anchor framework"
edition = "2021"
resolver = "2"                    # <<< add this

[lints.rust]
unexpected_cfgs = "allow"
deprecated = "allow"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []
real-crypto = []
# Optional: use Memo crate instead of hardcoding the program id
memo = ["spl-memo"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl  = { version = "0.31.1", default-features = false, features = ["token", "token_2022", "associated_token"] }

# Pin to Solana 2.x and strip defaults for safety
solana-program = { version = "2.3.0", default-features = false }

thiserror   = "1.0"
bytemuck    = { version = "1.13", features = ["derive"] }
sha2        = "0.10.8"
lazy_static = "1.4"

# Solana-native Groth16 verifier (replaces all Arkworks)
groth16-solana = { version = "0.2", default-features = false }
solana-bn254 = "2.2.2"

# For offchain testing
num-bigint = "0.4"

# Optional — only if you want `spl_memo::id()` instead of a hardcoded key:
spl-memo = { version = "4", optional = true, default-features = false }

[dev-dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "token_2022"] }
solana-program-test = "2.3.0"
solana-sdk = "2.3.0"
tokio = { version = "1.0", features = ["full"] }
assert_matches = "1.5"
pretty_assertions = "1.4"
env_logger = "0.10"
rand = "0.8"

[patch.crates-io]
